# rs-release

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: get_os_release.rs  who_eats_my_hard_drive.rs
src/: lib.rs
tests/: test_os_release.rs
tests/data/: os-release-comment  os-release-escaped-three-env  os-release-one-env  os-release-quotes-two-env  os-release-whitespace
