[package]
name = "rs-release"
version = "0.1.7"
authors = ["Boris Egorov <egorov@linux.com>"]

description = "os-release parser"
homepage = "https://github.com/JIghtuse/rs-release"
repository = "https://github.com/JIghtuse/rs-release"
documentation = "https://begorov.me/rs-release-doc/rs_release/"

readme = "README.md"
keywords = ["os-release", "env", "systemd"]
license = "MIT/Apache-2.0"

[dependencies]
